fixed centreHeader alignment

--- a/src/components/Nominator/Nominator.module.css
+++ b/src/components/Nominator/Nominator.module.css
@@ -94,4 +94,5 @@
 .centreParagraph{
   font-size: 4rem;
   margin-top: -4rem;
+  margin-left: -4rem;
 }
